<resources>
    <string name="app_name">Ads</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_to_ads_center">Welcome To Ads Center</string>
    <string name="sign_inn">Sign In</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="sign_upp">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwordd">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="_254">+ 254</string>
    <string name="emaill">Email</string>
    <string name="sign_uppp">Sign Up</string>
    <string name="select_location_prompt">Select Location</string>
    <string name="title_hint">Enter Title\n</string>
    <string name="description_hint">Enter Description</string>
    <string name="availability_text">Availability</string>
    <string name="additional_details">Additional Details\n</string>
    <string name="post_button_text">Post Ad</string>
    <string name="todo">TODO</string>
</resources>